--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-lerna-scopes": "^11.0.0",
     "@commitlint/prompt": "^11.0.0",
-    "@heartly/eslint-config-typescript": "^0.0.2",
+    "@heartly/eslint-config-typescript": "0.0.4",
     "@heartly/prettier-config": "^0.0.1",
     "@types/chalk": "^2.2.0",
     "@types/eslint": "^7.2.6",
@@ -29,7 +29,7 @@
     "@types/node": "^14.14.11",
     "@types/sade": "^1.7.2",
     "commitizen": "^4.2.2",
-    "eslint": "^7.15.0",
+    "eslint": "^7.17.0",
     "husky": "^4.3.5",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
