--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "ink": "^3.0.8",
+    "jest": "^26.6.3",
+    "react": "^17.0.1",
     "sade": "^1.7.4"
   },
   "devDependencies": {
@@ -25,16 +27,17 @@
     "@types/eslint": "^7.2.6",
     "@types/fs-extra": "^9.0.6",
     "@types/ink": "^2.0.3",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.4",
     "@types/node": "^14.14.11",
     "@types/sade": "^1.7.2",
     "commitizen": "^4.2.2",
     "eslint": "^7.17.0",
     "husky": "^4.3.5",
+    "jest": "^25.4.0",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^25.2.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.3",
