--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "ink": "^3.0.8",
-    "jest": "^26.6.3",
     "react": "^17.0.1",
     "sade": "^1.7.4"
   },
@@ -29,11 +28,12 @@
     "@types/ink": "^2.0.3",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.14.11",
+    "@types/react": "^17.0.0",
     "@types/sade": "^1.7.2",
     "commitizen": "^4.2.2",
     "eslint": "^7.17.0",
     "husky": "^4.3.5",
-    "jest": "^25.4.0",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
