--- a/.github/workflows/pull-request-manager.yml
+++ b/.github/workflows/pull-request-manager.yml
@@ -20,3 +20,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn
       - run: yarn build
+      - run: yarn lint
+      - run: yarn test
