--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "lint:ci": "yarn lint:cmd",
     "lint:cmd": "eslint . --ext '.ts'",
     "test": "yarn test:cmd",
-    "test:ci": "yarn test:cmd --ci",
-    "test:cmd": "jest --maxWorkers=4 --noStackTrace --collectCoverage=true",
+    "test:ci": "yarn test:cmd --ci --maxWorkers=4 --noStackTrace --testTimeout=10000",
+    "test:cmd": "jest --maxWorkers=4 --collectCoverage=true",
     "deploy": "yarn build && lerna publish from-package --ignore-scripts --canary --yes",
     "deploy:all": "yarn build && lerna publish --ignore-scripts",
     "refresh": "lerna clean && rm -rf node_modules && yarn",
