--- a/packages/install-dependencies/package.json
+++ b/packages/install-dependencies/package.json
@@ -26,6 +26,9 @@
     "yarn",
     "yarn-workspaces"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "yowainwright <yowainwright@gmail.com>",
   "homepage": "https://github.com/yowainwright/monorepo-utilities#readme",
   "license": "MIT",
@@ -54,5 +57,6 @@
     "transform": {
       "^.+\\.(ts)$": "ts-jest"
     }
-  }
+  },
+  "gitHead": "dc084956b00f09ec07822a6973561e17a4395d0b"
 }
