--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lint:cmd": "eslint . --ext '.ts'",
     "test": "yarn test:cmd",
     "test:ci": "yarn test:cmd --ci --maxWorkers=4 --noStackTrace --testTimeout=15000",
-    "test:cmd": "jest --maxWorkers=4 --collectCoverage=true",
+    "test:cmd": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=15000",
     "deploy": "yarn build && lerna publish from-package --ignore-scripts --yes",
     "deploy:all": "yarn build && lerna publish --ignore-scripts",
     "refresh": "lerna clean && rm -rf node_modules && yarn",
