--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "lint:ci": "yarn lint:cmd",
     "lint:cmd": "eslint . --ext '.ts'",
     "test": "yarn test:cmd",
-    "test:ci": "yarn test:cmd --ci --maxWorkers=4 --noStackTrace --testTimeout=10000",
-    "test:cmd": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=10000 --detectOpenHandles",
+    "test:cmd": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=10000",
     "deploy": "yarn build && lerna publish from-package --ignore-scripts --yes",
     "deploy:all": "yarn build && lerna publish --ignore-scripts",
     "refresh": "lerna clean && rm -rf node_modules && yarn",
