--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "chalk": "^4.1.0",
-    "ink": "^3.0.8",
-    "react": "^17.0.1",
     "sade": "^1.7.4",
     "tiny-glob": "^0.2.8"
   },
@@ -20,10 +17,8 @@
     "@commitlint/prompt": "^11.0.0",
     "@heartly/eslint-config-typescript": "0.0.4",
     "@heartly/prettier-config": "^0.0.1",
-    "@types/chalk": "^2.2.0",
     "@types/eslint": "^7.2.6",
     "@types/fs-extra": "^9.0.6",
-    "@types/ink": "^2.0.3",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
@@ -36,6 +31,7 @@
     "lint-staged": "^10.5.3",
     "pnpm": "^5.16.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^25.2.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
