--- a/.github/workflows/pull-request-manager.yml
+++ b/.github/workflows/pull-request-manager.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn
-      - run: yarn build
-      - run: yarn lint
-      - run: yarn test
+      - run: npm install pnpm -g
+      - run: pnpm install
+      - run: pnpm run build
+      - run: pnpm run lint
+      - run: pnpm run test
