--- a/package.json
+++ b/package.json
@@ -29,15 +29,13 @@
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
-    "pnpm": "^5.16.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.2.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.2",
-    "yarnhook": "^0.5.1"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "build": "pnpm run clean:dist && pnpm run build:dist",
@@ -49,6 +47,7 @@
     "test": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=10000",
     "deploy": "pnpm run build && lerna publish from-package --ignore-scripts --yes",
     "deploy:all": "pnpm run build && lerna publish --ignore-scripts",
+    "preinstall": "npx only-allow pnpm",
     "refresh": "lerna clean && rm -rf node_modules && pnpm recursive install",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
@@ -96,9 +95,9 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "post-checkout": "if [[ $HUSKY_GIT_PARAMS =~ 1$ ]]; then yarnhook; fi",
-      "post-merge": "yarnhook",
-      "post-rewrite": "yarnhook",
+      "post-checkout": "if [[ $HUSKY_GIT_PARAMS =~ 1$ ]]; then pnpm install; fi",
+      "post-merge": "pnpm install",
+      "post-rewrite": "pnpm install",
       "pre-commit": "pnpm run tsc && lint-staged"
     }
   },
@@ -115,5 +114,8 @@
       "jest --bail --findRelatedTests"
     ]
   },
-  "prettier": "@heartly/eslint-config-typescript/dist/prettier"
+  "prettier": "@heartly/eslint-config-typescript/dist/prettier",
+  "engines": {
+    "pnpm": ">=5"
+  }
 }
