--- a/package.json
+++ b/package.json
@@ -38,17 +38,13 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "build": "pnpm run clean:dist && pnpm run build:dist",
-    "build:dist": "lerna run build",
-    "clean": "lerna clean",
-    "clean:dist": "lerna run clean",
+    "build": "pnpm run clean && pnpm run build",
+    "clean": "lerna run clean",
     "lint": "eslint . --ext '.ts' --fix",
     "lint:ci": "eslint . --ext '.ts'",
     "test": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=15000",
-    "deploy": "pnpm run build && lerna publish from-package --ignore-scripts --yes",
-    "deploy:all": "pnpm run build && lerna publish --ignore-scripts",
+    "deploy": "pnpm run build && pnpm -r publish",
     "preinstall": "npx only-allow pnpm",
-    "refresh": "lerna clean && rm -rf node_modules && pnpm recursive install",
     "tsc": "tsc -p ./tsconfig.test.json"
   },
   "config": {
