--- a/packages/install-dependencies/package.json
+++ b/packages/install-dependencies/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@monorepo-utilities/install-dependencies",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Builds node modules to a spectified path 📦",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/*"
   ],
   "bin": {
     "install-dependencies": "./dist/index.js"
