--- a/packages/list-packages-by-directory/package.json
+++ b/packages/list-packages-by-directory/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@monorepo-utilities/list-packages-by-directory",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "List packages by directory ፨",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/*"
   ],
   "bin": {
     "list-packages-by-directory": "./dist/index.js"
