--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "eslint": "^7.17.0",
     "husky": "^4.3.5",
     "jest": "^26.6.3",
-    "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -38,11 +37,10 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "build": "pnpm run clean && pnpm run build",
-    "clean": "lerna run clean",
+    "build": "pnpm -r clean && pnpm -r build",
     "lint": "eslint . --ext '.ts' --fix",
     "lint:ci": "eslint . --ext '.ts'",
-    "test": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=15000",
+    "test": "jest --maxWorkers=4 --collectCoverage=true --testTimeout=15000 --detectOpenHandles",
     "deploy": "pnpm run build && pnpm -r publish",
     "preinstall": "npx only-allow pnpm",
     "tsc": "tsc -p ./tsconfig.test.json"
