--- a/.github/workflows/pull-request-manager.yml
+++ b/.github/workflows/pull-request-manager.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install pnpm -g
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile=false
       - run: pnpm run build
       - run: pnpm run lint
       - run: pnpm run test
