--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-git-checks = true
-hoist = false
-link-workspace-packages = true
-shared-workspace-lockfile = true
-publish-branch = master
+link-workspace-packages=true
+shared-workspace-lockfile=true
+publish-branch=master
+use-node-version=16.15.1
+strict-peer-dependencies=false
