--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "README.md",
   "scripts": {
     "build": "turbo run build",
+    "bump": "changeset version",
     "clean": "turbo run clean",
+    "deploy": "pnpm build && changeset publish && git push --follow-tags",
+    "document": "changeset",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "test": "turbo run test",
@@ -14,6 +17,7 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.24.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-lerna-scopes": "^17.0.2",
     "@commitlint/prompt": "^17.0.3",
@@ -27,9 +31,12 @@
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "shx": "^0.3.4",
+    "stdouttojson": "^0.3.6",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
+    "tsup": "^6.2.1",
     "tsutils": "^3.21.0",
     "turbo": "^1.4.3",
     "typescript": "^4.7.4",
