--- a/packages/install-dependencies/tsconfig.json
+++ b/packages/install-dependencies/tsconfig.json
@@ -3,5 +3,13 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "ts-node": {
+    "transpileOnly": true,
+    "esm": true,
+    "moduleTypes": {
+      "package.json": "cjs",
+      "src/*": "cjs"
+    }
+  }
 }
