--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "test": "turbo run test",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "testing": "install-dependencies --debug"
   },
   "devDependencies": {
     "@changesets/cli": "^2.24.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-lerna-scopes": "^17.0.2",
     "@commitlint/prompt": "^17.0.3",
+    "@monorepo-utilities/install-dependencies": "workspace:^1.0.1",
     "@types/eslint": "^8.4.5",
     "@types/node": "^18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
