--- a/packages/install-dependencies/package.json
+++ b/packages/install-dependencies/package.json
@@ -15,8 +15,8 @@
     "dist"
   ],
   "bin": {
-    "install-dependencies": "./dist/index.cjs",
-    "ideps": "./dist/index.cjs"
+    "install-deps": "dist/index.cjs",
+    "ideps": "dist/index.cjs"
   },
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
@@ -32,8 +32,7 @@
     "commander": "^9.4.0",
     "compare-versions": "^4.1.3",
     "cosmiconfig": "^7.0.1",
-    "fast-glob": "^3.2.11",
-    "lilconfig": "^2.0.6"
+    "fs-extra": "^10.1.0"
   },
   "publishConfig": {
     "access": "public"
@@ -59,8 +58,5 @@
     "node-services",
     "package-management",
     "services"
-  ],
-  "devDependencies": {
-    "fs-extra": "^10.1.0"
-  }
+  ]
 }
