--- a/package.json
+++ b/package.json
@@ -15,34 +15,36 @@
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
     "typecheck": "turbo run typecheck",
-    "testing": "install-dependencies --debug"
+    "testing": "install-dependencies --debug",
+    "update": "codependence --update"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.25.2",
-    "@commitlint/cli": "^17.2.0",
+    "@changesets/cli": "^2.26.0",
+    "@commitlint/cli": "^17.3.0",
     "@commitlint/config-lerna-scopes": "^17.2.1",
-    "@commitlint/prompt": "^17.2.0",
+    "@commitlint/prompt": "^17.3.0",
     "@monorepo-utilities/install-dependencies": "workspace:^1.3.0",
     "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "commitizen": "^4.2.5",
-    "eslint": "^8.27.0",
+    "@types/node": "^18.11.17",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "codependence": "^0.2.6",
+    "commitizen": "^4.2.6",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
     "stdouttojson": "^0.7.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.1.1",
     "tslib": "^2.4.1",
-    "tsup": "^6.4.0",
+    "tsup": "^6.5.0",
     "tsutils": "^3.21.0",
     "turbo": "^1.6.3",
-    "typescript": "^4.8.4",
-    "vitest": "^0.25.1"
+    "typescript": "^4.9.4",
+    "vitest": "^0.25.8"
   },
   "repository": "git@github.com:yowainwright/monorepo-utilities.git",
   "author": "yowainwright <yowainwright@gmail.com>",
